force-app/main/default/objects/Merge_Event__e/Merge_Event__e.object-meta.xml
<CustomObject>
    <label>Merge Event</label>
    <pluralLabel>Merge Events</pluralLabel>
</CustomObject>