force-app/main/default/objects/Merge_Event__e/fields/Event_Info__c.field-meta.xml
<CustomField>
    <fullName>Event_Info__c</fullName>
    <description>This field is store the event message.</description>
    <label>Event Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>