force-app/main/default/objects/Merge_Event__e/fields/Event_Publisher__c.field-meta.xml
<CustomField>
    <fullName>Event_Publisher__c</fullName>
    <description>This indicate who have published this event.</description>
    <label>Event Publisher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>