force-app/main/default/objects/Merge_Event__e/fields/Is_Event_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Event_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will indicate whether the event is valid or not.</description>
    <label>Is Event Valid</label>
    <type>Checkbox</type>
</CustomField>