force-app/main/default/objects/Merge_Event__e/fields/Records_Ids__c.field-meta.xml
<CustomField>
    <fullName>Records_Ids__c</fullName>
    <description>This will contains the records ids which has processed.</description>
    <label>Records Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>